--- a/src/main/frontend/customer-management/src/App.css
+++ b/src/main/frontend/customer-management/src/App.css
@@ -46,71 +46,13 @@
    padding: 0 20px;
  }
 
+ 
 
-
- .my-navbar {
-   overflow: hidden;
-   background-color: #333;
- }
-
- .my-navbar a {}
-
- .my-dropdown {
-   float: left;
-   overflow: hidden;
- }
-
- .my-dropdown {}
-
- .nmy-avbar a:hover,
- .my-dropdown:hover .dropbtn {
-   background-color: brown;
- }
-
- .dropdown-content {
-   display: none;
-   position: absolute;
-   background-color: #f9f9f9;
-   min-width: 160px;
-   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-   z-index: 1;
-
-
- }
-
- .dropdown-content a {
-   float: none;
-   color: #000;
-   padding: 12px 16px;
-   text-decoration: none;
-   display: block;
-   text-align: left;
-
- }
-
- .dropdown-content a:hover {
-   background-color: brown;
-   color: #fff;
-
- }
-
- .my-dropdown:hover .dropdown-content {
-   display: block;
- }
-
- .nav-right {
-   float: left;
- }
-
- .my-navbar button {
-   border-radius: 0px;
- }
-
+ */
  .icon-svg {
-   height: 25px;
-   width: 25px;
- }
-
+  height: 25px;
+  width: 25px;
+}
  .wf-container {
    text-align: center;
    margin-top: 10px;
@@ -185,4 +127,121 @@ a, a:visited, a:hover {
   border: 1px solid #888;
   margin-top: 10%;
   width: 60%;
+}
+
+
+
+/**/
+
+
+nav {
+	/* margin: 50px 0; */
+	background-color:brown;
+  color: white; 
+}
+
+nav ul {
+	padding: 0;
+  margin: 0;
+	list-style: none;
+	position: relative;
+  box-shadow: #000;
+  /* color: #FFF; */
+	}
+	
+nav ul li {
+	display:inline-block;
+	/* background-color: brown; */
+  color: #000;	
+}
+
+nav a {
+	display:block;
+	line-height: 30px;
+	text-decoration:none;
+  
+}
+
+/* Hide Dropdowns by Default */
+nav ul ul {
+	display: none;
+	position: absolute; 
+	
+}
+	
+/* Display Dropdowns on Hover */
+nav ul li:hover > ul {
+	display:inherit;
+}
+	
+/* Fisrt Tier Dropdown */
+nav ul ul li {
+	float:none;
+	display:list-item;
+	position: relative;
+}
+
+/* Second, Third and more Tiers	*/
+nav ul ul ul li {
+	position: relative;
+	top:-60px; 
+	left:170px;
+}
+.nav-bar{
+  /* background-color: brown; */
+  padding-top:10px;
+  padding-bottom:10px;
+  
+  /* color: #fff !important; */
+}
+a, a:visited, a:hover{
+  font-weight: bold;
+  color: #FFF;
+}
+
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+ float: right;
+ font-weight: bold;
+color: brown;
+}
+
+	
+/* Change this in order to change the Dropdown symbol */
+/* li > a:after { content:  ' +'; }
+li > a:only-child:after { content: ''; } */
+
+/**/ 
+
+
+
+
+.dropdown-content a {
+  float: none;
+  color: brown;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  padding-top: 5px;
+}
+
+.dropdown-content a:hover {
+  background-color: brown;
+  color: #fff;
+
+}
+
+.nav-right {
+  float: left;
+}
+
+.my-navbar button {
+  border-radius: 0px;
 }
