--- a/src/main/frontend/customer-management/src/App.css
+++ b/src/main/frontend/customer-management/src/App.css
@@ -9,8 +9,6 @@
   --color-wf-pending:orange;
 }
 
-
-
 .form-container {
   max-width: 60%;
   margin: auto;
@@ -60,7 +58,7 @@
 
 
 
-*/ .icon-svg {
+.icon-svg {
   height: 25px;
   width: 25px;
 }
@@ -134,25 +132,25 @@ a:hover {
 
 .popup-modal {
   display: block;
-  /* Hidden by default */
+  
   position: fixed;
-  /* Stay in place */
+  
   z-index: 1;
-  /* Sit on top */
+  
   padding-top: 100px;
-  /* Location of the box */
+  
   left: 0;
   top: 0;
   width: 100%;
-  /* Full width */
+  
   height: 100%;
-  /* Full height */
+  
   overflow: auto;
-  /* Enable scroll if needed */
+  
   background-color: rgb(0, 0, 0);
-  /* Fallback color */
+  
   background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/ opacity */
+  
 }
 
 .modal-content {
